--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  background-color: #1e1e1e !important;
+  color: #97c3bc !important;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
